# BayMax-Ro1

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HARDWARE.md  Initial_dev_plan.txt  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cloud/api/: main.py  supabase_client.py
cloud/database/: schema.sql
data/knowledge_base/: .gitkeep  conditions.json  interactions.json  medications.json
docs/: DEVELOPMENT_PLAN.md  DEV_ENVIRONMENT.md  PACKAGE_SUMMARY.md
edge/: README.md  requirements.txt
edge/config/: settings.yaml
edge/scripts/: download_model.py
edge/src/: main.py
edge/src/agents/: diagnosis_agent.py  orchestrator.py  vitals_agent.py
mobile/: app.json  package.json
mobile/src/: App.tsx
mobile/src/screens/: HomeScreen.tsx  PatientHistoryScreen.tsx  PatientRegistrationScreen.tsx  ScanResultsScreen.tsx  SymptomInputScreen.tsx
mobile/src/services/: supabase.tsx
web/: .env.local  next.config.js  package.json  tailwind.config.js
web/src/pages/: Dashboard.tsx
