[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baymax-ro1"
version = "1.0.0"
description = "Portable AI diagnostic device for underserved populations"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "BayMax-Ro1 Team"}
]
requires-python = ">=3.11"
keywords = ["medical", "diagnostics", "ai", "edge-computing", "healthcare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    
    # ML/AI
    "torch>=2.0.0",
    "onnxruntime>=1.15.0",
    "transformers>=4.30.0",
    
    # Agent Framework
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    
    # LLM
    "ollama>=0.3.0",
    
    # Sensor Processing
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "librosa>=0.10.0",
    
    # Communication
    "bleak>=0.21.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "redis>=5.0.0",
    
    # Utilities
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
]
mobile = [
    "react-native",
]

[project.urls]
Homepage = "https://github.com/your-org/BayMax-Ro1"
Documentation = "https://your-org.github.io/BayMax-Ro1"
Repository = "https://github.com/your-org/BayMax-Ro1"
Issues = "https://github.com/your-org/BayMax-Ro1/issues"

[tool.setuptools.packages.find]
include = ["edge*", "cloud*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=. --cov-report=html"

[tool.coverage.run]
source = ["edge", "cloud"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
